[gd_scene load_steps=5 format=2]

[ext_resource path="res://scripts/Person.gd" type="Script" id=1]
[ext_resource path="res://sprites/lowrezjam/hail_taxi_speech_bubble.png" type="Texture" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 8.0

[sub_resource type="CircleShape2D" id=2]
radius = 15.0

[node name="Person" type="Area2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
scale = Vector2( 0.2, 0.1 )

[node name="SpeechBubble" type="Sprite" parent="."]
visible = false
position = Vector2( 0, -8 )
texture = ExtResource( 2 )

[node name="HailTaxiArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HailTaxiArea"]
shape = SubResource( 2 )

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_screen_exited"]
[connection signal="body_entered" from="HailTaxiArea" to="." method="_on_HailTaxiArea_body_entered"]
[connection signal="body_exited" from="HailTaxiArea" to="." method="_on_HailTaxiArea_body_exited"]
